# g2o_exercise

./: README.md
knowledge_plant_exercise_17/: BA-3Dto2D.cpp  CMakeLists.txt
points_cloud_display_with_pcl/: CMakeLists.txt  cloud_viewer.cpp
vslam_14_lessons_7th_mission/: BundleAdjustment.cpp  BundleAdjustment.h  CMakeLists.txt  data.cpp  data.h  main.cpp  main.h  refs.txt
